--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
     <title>LLM Clipping</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 
 <body class="bg-light">
@@ -24,50 +23,67 @@
                 </div>
 
                 <div class="input-group mb-3">
+
+                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">Publisher</button>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a @click.prevent="selectSource(source)" v-for="source in filteredSources"
+                                class="dropdown-item" href="#">
+                                {{ source}}
+                            </a>
+                        </li>
+                    </ul>
+
                     <input v-model="searchTerm" type="text" class="form-control" placeholder="Enter a search term...">
                     <span class="input-group-text" id="basic-addon2">
                         <i class="bi bi-search"></i>
                     </span>
                 </div>
 
-                <div v-for="item in filteredPosts" :key="item.id" class="card mb-3 shadow-sm">
-
-                    <div class="card-header bg-light">
-                        <div class="d-flex justify-content-between">
-                            <div class="">
-                                {{ item.source }}
+                <!-- Card -->
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-3">
+                    <div v-for="item in filteredPosts" :key="item.date" class="col">
+                        <div class="card h-100">
+                            <div class="card-header">
+                                <div class="d-flex justify-content-between">
+                                    <div>{{ item.source }}</div>
+                                    <div>{{ item.date }}</div>
+                                </div>
                             </div>
 
-                            <div class="">
-                                {{ item.data }}
+                            <div class="card-body">
+                                <h5 class="card-title mb-3">
+                                    <a :href="item.url" class="text-decoration-none">
+                                        {{ item.title }}
+                                    </a>
+                                </h5>
+                                <p class="card-text">{{ item.summary }}</p>
+                            </div>
+
+                            <div class="card-footer text-end">
+
+                                <a title="Read More" :href="item.url" class="btn btn-outline-primary btn-sm"
+                                    target="_blank">
+                                    <i class="bi bi-link-45deg"></i>
+                                </a>
                             </div>
                         </div>
-
                     </div>
-
-                    <div class="card-body">
-
-                        <h5 class="card-title mb-3">
-                            {{ item.title }}
-                        </h5>
-
-                        <p class="card-text">
-                            {{ item.summary }}
-                        </p>
-                    </div>
-
-                    <div class="card-footer text-end">
-                        <a :href="item.url" class="btn btn-outline-primary btn-sm" target="_blank">
-                            <i class="bi bi-link-45deg"></i>
-                            Read More
-                        </a>
-                    </div>
-
                 </div>
+
             </div>
         </div>
 
     </div>
+
+    <!-- Bootstrap 5.3.8-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
 
     <!-- Vue 3 -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
